--- a/DistSemanticsBelgradeR-Part1.Rmd
+++ b/DistSemanticsBelgradeR-Part1.Rmd
@@ -7,6 +7,8 @@
 
 Organized by: [Data Science Serbia](http//:www.datascience.rs) and [Startit](http://en.startit.rs)
 
+Notebook: 12/24/2016
+
 ***
 
 ![](img/GoranSMilovanovic.jpg)
